[package]
name = "jwsserver"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.4"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "9.2", features = ["pem"] }
thiserror = "2.0.14"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8.0"
